tests/integration/tests/di/ui/fail/missing_injectable_type_trait.stderr
error[E0599]: the method `__resolve_inject_parameter` exists for struct `reinhardt_di::__InjectResolver<Broken<AppConfig>>`, but its trait bounds were not satisfied
  --> tests/di/ui/fail/missing_injectable_type_trait.rs:21:1
   |
17 | struct Broken<T>(reinhardt_di::Depends<T>)
   | ---------------- doesn't satisfy `Broken<AppConfig>: Clone`, `Broken<AppConfig>: InjectableType` or `Broken<AppConfig>: Injectable`
...
21 | #[get("/broken-wrapper", name = "broken-wrapper")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `reinhardt_di::__InjectResolver<Broken<AppConfig>>` due to unsatisfied trait bounds
   |
  ::: $WORKSPACE/crates/reinhardt-di/src/injectable_type.rs
   |
   | pub struct __InjectResolver<T> {
   | ------------------------------ doesn't satisfy `_: __InjectWrapperResolver<Broken<AppConfig>>`
   |
   = note: the following trait bounds were not satisfied:
           `Broken<AppConfig>: InjectableType`
           which is required by `reinhardt_di::__InjectResolver<Broken<AppConfig>>: reinhardt_di::__InjectWrapperResolver<Broken<AppConfig>>`
           `Broken<AppConfig>: Injectable`
           which is required by `&reinhardt_di::__InjectResolver<Broken<AppConfig>>: reinhardt_di::__InjectFallbackResolver<Broken<AppConfig>>`
           `Broken<AppConfig>: Clone`
           which is required by `&reinhardt_di::__InjectResolver<Broken<AppConfig>>: reinhardt_di::__InjectFallbackResolver<Broken<AppConfig>>`
note: the traits `Injectable` and `InjectableType` must be implemented
  --> $WORKSPACE/crates/reinhardt-di/src/injectable_type.rs
   |
   | pub trait InjectableType: Sized + Send + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $WORKSPACE/crates/reinhardt-di/src/injectable.rs
   |
   | pub trait Injectable: Sized + Send + Sync + 'static {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Broken<AppConfig>` with `#[derive(Clone)]`
   |
17 + #[derive(Clone)]
18 | struct Broken<T>(reinhardt_di::Depends<T>)
   |
